k8s/k8s-1/assets/03_web1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: web1
spec:
  containers:
  - name: web1
    image: jmnote/supervisor-nginx
    livenessProbe:
      httpGet:
        path: /
        port: 80
      initialDelaySeconds: 5
      timeoutSeconds: 3
