k8s/k8s-1/assets/07_httpd-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd-deployment
  labels:
    app: httpd-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: httpd-deployment
  template:
    metadata:
      labels:
        app: httpd-deployment
    spec:
      containers:
      - image: katacoda/docker-http-server:v4
        name: httpd-deployment
        ports:
        - containerPort: 80
          protocol: TCP
