k8s/k8s-1/assets/15-2_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
spec:
  containers:
  - name: nginx
    image: nginx
    volumeMounts:
    - name: vol1
      mountPath: /usr/share/nginx/html/
      readOnly: true
  volumes:
  - name: vol1
    configMap:
      name: myconfigmap
