k8s/k8s-1/assets/17_nfs-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nfs-server
  labels:
    app: nfs-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nfs-server
  template:
    metadata:
      labels:
        app: nfs-server
    spec:
      hostNetwork: true
      containers:
      - name: nfs-server
        image: katacoda/contained-nfs-server:centos7
        args: ["/exports/data-0001","/exports/data-0002"]
        securityContext:
          privileged: true
