k8s/k8s-1/assets/17_pod-mysql.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mysql
  labels:
    name: mysql
spec:
  containers:
  - name: mysql
    image: mysql
    ports:
      - containerPort: 3306
        name: mysql
    volumeMounts:
      - name: volume1
        mountPath: /var/lib/mysql/data
  volumes:
    - name: volume1
      persistentVolumeClaim:
        claimName: pvc-mysql
