k8s/k8s-1/assets/17_pod-nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    name: nginx
spec:
  containers:
  - name: nginx
    image: nginx:alpine
    ports:
      - containerPort: 80
        name: nginx
    volumeMounts:
      - name: volume1
        mountPath: /usr/share/nginx/html
  volumes:
    - name: volume1
      persistentVolumeClaim:
        claimName: pvc-nginx
