k8s/k8s-1/assets/07_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpd-clusterip-service
spec:
  selector:
    app: httpd-replicaset
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
