k8s/k8s-1/assets/08_nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpd-nodeport-service
spec:
  type: NodePort
  selector:
    app: httpd-deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
