k8s/k8s-1/assets/09_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: webapp-ingress
spec:
  rules:
  - host: my.kubernetes.example
    http:
      paths:
      - path: /
        backend:
          serviceName: httpd-clusterip-service
          servicePort: 80
